--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Arthur Creek <arthur.creek@gmail.com>",
   "dependencies": {},
   "devDependencies": {
+    "open": "0.0.5",
     "gulp": "~3.6.1",
     "gulp-util": "~2.2.14",
     "gulp-jade": "~0.5.0",
@@ -14,7 +15,6 @@
     "gulp-rename": "~1.2.0",
     "gulp-clean": "~0.2.4",
     "gulp-connect": "~2.0.5",
-    "gulp-livereload": "~1.3.1",
     "gulp-ftp": "~0.2.1"
   },
   "engines": {
